--- a/BookStorage/BookStorage.csproj
+++ b/BookStorage/BookStorage.csproj
@@ -6,19 +6,23 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version>0.0.3</Version>
+		<Version>0.0.4</Version>
 	</PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Extensions\RepositoryExtensions\" />
     <Folder Include="Models\Dto\BookDto\" />
     <Folder Include="Models\ViewModels\" />
+    <Folder Include="Repositories\Base\" />
     <Folder Include="Settings\" />
     <Folder Include="Repositories\BookRepository\" />
     <Folder Include="Scripts\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RepoDb" Version="1.13.1" />
   </ItemGroup>
 
 </Project>
