added authenfication using cookies

--- a/BookStorage/appsettings.json
+++ b/BookStorage/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "WebsiteName": "BookStorage",
+  "CookieSettings": {
+    "CookieName": ".BookStorage.Cookie",
+    "ExpiryAgeInDays": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
