--- a/BookStorage/BookStorage.csproj
+++ b/BookStorage/BookStorage.csproj
@@ -6,14 +6,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version>0.0.6</Version>
+		<Version>0.0.7</Version>
 	</PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Extensions\RepositoryExtensions\" />
     <Folder Include="Models\Dto\BookDto\" />
     <Folder Include="Models\Dto\UserDto\" />
-    <Folder Include="Models\Entities\UserEntities\" />
     <Folder Include="Models\ViewModels\UserViewModel\" />
     <Folder Include="Repositories\Base\" />
     <Folder Include="Repositories\UserRepository\" />
@@ -24,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RepoDb" Version="1.13.1" />
