--- a/BookStorage/appsettings.json
+++ b/BookStorage/appsettings.json
@@ -13,6 +13,10 @@
     "BookCoverImage": {
       "MaxAttachmentSize": 2097152,
       "AllowedAttachmentTypes": [ "image/jpeg", "image/png" ]
+    },
+    "BookFile": {
+      "MaxAttachmentSize": 10485760,
+      "AllowedAttachmentTypes": [ "application/epub+zip" ]
     }
   },
   "Logging": {
