removed epub validation & added fictionbook validation for filepond

--- a/BookStorage/appsettings.json
+++ b/BookStorage/appsettings.json
@@ -16,7 +16,7 @@
     },
     "BookFile": {
       "MaxAttachmentSize": 10485760,
-      "AllowedAttachmentTypes": [ "application/epub+zip" ]
+      "AllowedAttachmentTypes": [ "application/x-fictionbook" ]
     }
   },
   "Logging": {
