--- a/BookStorage/appsettings.Alex.json
+++ b/BookStorage/appsettings.Alex.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=Alex; Database=BookStorage; User Id=sa; Password=sa; Persist Security Info = true; MultipleActiveResultSets=True; Encrypt = False;"
+    "SqlServer": "Server=Alex; Database=BookStorage; User Id=sa; Password=sa; Persist Security Info = true; MultipleActiveResultSets=True; Encrypt = False;Connection Timeout=3600;"
   }
 }
