added tinymce html extension

--- a/BookStorage/appsettings.json
+++ b/BookStorage/appsettings.json
@@ -1,5 +1,6 @@
 {
   "WebsiteName": "BookStorage",
+  "TinymceApiKey": "3ef7juk0t51uoo5ksogvvjj8yy2z56maoz1ghjk9nm4aq492",
   "CookieSettings": {
     "CookieName": ".BookStorage.Cookie",
     "ExpiryAgeInDays": 30
