added posibility for updating avatar from user profile

--- a/BookStorage/appsettings.json
+++ b/BookStorage/appsettings.json
@@ -18,6 +18,10 @@
     "BookFile": {
       "MaxAttachmentSize": 10485760,
       "AllowedAttachmentTypes": [ "application/x-fictionbook" ]
+    },
+    "Avatar": {
+      "MaxAttachmentSize": 2097152,
+      "AllowedAttachmentTypes": [ "image/jpeg", "image/png" ]
     }
   },
   "Logging": {
